--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ h1{
 	font-weight:bold;
 	font-family:sans;	
 	text-shadow: 5px 5px 3px black;
+	font-variant: :small-caps;
 	
 	}
 	
@@ -31,7 +32,7 @@ table{
 	width:80%;
 	margin:0px auto;
 	border:solid 2px black;
-	background-image:linear-gradient(to right, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), linear-gradient(to right, black 50%, white 50%),linear-gradient(to bottom, black 50%, white 50%);
+	/*background-image:linear-gradient(to right, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), linear-gradient(to right, black 50%, white 50%),linear-gradient(to bottom, black 50%, white 50%);*/
 	background-blend-mode: normal, difference, normal;
 	background-size: 5em 5em;
 				
@@ -49,12 +50,13 @@ footer{
 }	
 
 .d2 {
-background-image:
+/* background-image:
 linear-gradient(
 	0deg,
 	rgba(255,128,128,0.25),
 	rgba(255,128,128,0) 75%
-)
+	*/
+) 
 ,
 linear-gradient(
 	89deg,
@@ -106,7 +108,7 @@ height:100vh;
 
 
 #container{
-width:80%;
+width:100%;
 margin:0px auto;
 }
 
