--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-body{text-align:center; background:rgba(22,22,22,255); font-family:sans; color:#ddd; padding-bottom:100px;}
+body{text-align:center; background:rgba(22,22,22,255); font-family:sans; color:#ddd;}
 
+#wrapper{
+text-align:center;
+}
 h1{
 	font-size:3.5em;
 	color:#eee;
@@ -154,10 +157,10 @@ a{color:#fe8}
 iframe{margin:10px}
 b{font-weight:bold;color:#fa2;}
 #header{width:100%;margin:-10px auto 20px auto;}
-p{line-height:1.5em;}
+p{font-size:1.25em;line-height:1.5em; width:80%;margin:0px auto;padding-bottom:20px;text-align:left;}
 .gold{color:#fa4;}
 .green{color:#8f4;}
-p{margin: 10px 0px; 5px 0px;}
+
 p.mono{font-size:1.25em;font-family:monospace;font-weight:bold;width:100%;height:100%}
 .scriptfont{font-family:script;}
 .peace{color:#a41;}
